# sqlsynthgen

./: .gitignore  .jsfh.yaml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CONTRIBUTING.md  README.md  mdl_style.rb  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yml  publish.yml  tests.yml
docs/: requirements.txt
docs/source/: Tutorial.rst  api.rst  changelog.rst  conf.py  configuration.rst  faq.rst  glossary.rst  health_data.rst  index.rst  installation.rst  introduction.rst  loan_data.rst  modules.rst  quickstart.rst  simple_example.rst  sqlsynthgen.rst  tutorials.rst  usage.rst
docs/source/_static/: config_schema.html
docs/source/tutorials/: airbnb.rst  loan_applications.rst  omop-cdm.rst
docs/temp/: automatethis.txt
examples/: README.md
examples/airbnb/: README.md  airbnb_generators.py  complete_config.yaml  csv_to_database.py  final_ssg_example.py
examples/cchic_omop/: README.md  config.yaml  row_generators.py  story_generators.py
examples/loans/: README.md  my_row_generators.py
sqlsynthgen/: __init__.py  base.py  create.py  create_generators.py  docs.py  foreign_key_provider.py  main.py  make.py  providers.py  remove.py  settings.py  unique_generator.py  utils.py
sqlsynthgen/json_schemas/: config_schema.json
sqlsynthgen/templates/: ssg.py.j2  ssg.py.template
tests/: CONTRIBUTING.md  test_base.py  test_create.py  test_create_generators.py  test_functional.py  test_main.py  test_make.py  test_providers.py  test_remove.py  test_rst.py  test_settings.py  test_unique_generator.py  test_utils.py  utils.py
tests/examples/: basetable.yaml  custom_generators.py  dst.dump  example_config.yaml  example_orm.py  example_tables.py  expected.json  expected.yaml  expected_output.py  expected_ssg.py  functional_conf.yaml  generator_conf.yaml  import_test.py  invalid_config.yaml  mytable.csv  providers.dump  remove_ssg.py  row_generators.py  src.dump  story_generators.py  unique_generator.dump
tests/examples/adult/: csv_to_database.py
tests/examples/airbnb/: 1_ssg_manual_edit.py  airbnb_generators.py  complete_config.yaml  config_with_row_generators.yaml  config_with_vocabulary_tables.yaml  csv_to_database.py  final_ssg_example.py  ssg_manual_edit.py  ssg_with_vocabulary_tables.py
tests/examples/loans/: config.yaml  config1.yaml  config2.yaml  config3.yaml  my_row_generators.py
tests/examples/omop/: config.yaml  custom_generators.py
tests/workspace/: README.md  custom_generators.py  story_generators.py
