[tool.poetry]
name = "sqlsynthgen"
version = "0.2.0"
description = ""
authors = ["Iain <25081046+Iain-S@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
psycopg2-binary = "^2.9.5"
sqlalchemy-utils = "^0.38.3"
mimesis = "^6.1.1"
typer = "^0.7.0"
pyyaml = "^5.0"
sqlalchemy = "^1.4"
sphinx-rtd-theme = {version = "^1.2.0", optional = true}
sphinxcontrib-napoleon = {version = "^0.7", optional = true}
smartnoise-sql = "^0.2.11"
jinja2 = "^3.1.2"
black = "^23.3.0"
jsonschema = "^4.17.3"
sqlacodegen = "3.0.0rc1"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
pylint = "^2.15.8"
mypy = "^0.991"
types-pyyaml = "^6.0.12.4"
pydocstyle = "^6.3.0"
restructuredtext-lint = "^1.4.0"
pygments = "^2.14.0"
rstcheck-core = {extras = ["sphinx"], version = "^1.0.3"}
json-schema-for-humans = "^0.44.5"

[tool.poetry.extras]
docs = ["sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sqlsynthgen = "sqlsynthgen.main:app"

[tool.isort]
profile = "black"
